2003-04-10  Jacob Perkins  <jap1@users.sourceforge.net>

	* Added plugins/nautilus for the nautilus component
	* data/seahorse.mime: Added mime types for application/pgp

2003-04-09  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-import:
	* seahorse-export:
	Added clipboard functionality
	* seahorse-context: Disabled use of mutexes
	* seahorse-key-manager: Added selection status display
	* main.c: Added popt context for doing command line options

2003-04-05  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-context: Refactored key loading to use thread pools and
	multiple contexts for listing, updated ::keys_added to use new code
	* seahorse-key-op: Bug fixes in ::set_trust, ::set_disabled, ::generate

2003-04-04  Jacob Perkins  <jap1@users.sourceforge.net>

	* Massive restructuring: many files moved to libseahorse/,
	removed src/dialogs/. libseahorse/ now contains files that may be used
	by those in src/ and will be shared with future plugins.
	src/ only contains files necessary to the application.
	* All .glade2 files have been renamed to .glade

2003-03-30  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-util: Added ::check_suffix

2003-03-28  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-util: Added ::write_data_to_file and ::write_data_to_text,
	::handle_error, ::add_suffix
	* seahorse-op: Added, will replace seahorse-ops-(file|text|data)
	* seahorse-context: Added ::keys_added

2003-03-26  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-store: Added ::get_selected_keys, modified ::get_selected_key
	to just return first selected
	* seahorse-key-manager: Can do multiple selection of keys

2003-03-24  Jacob Perkins  <jap1@users.sourceforge.net>

	* Release 0.7.2

2003-03-21  Jacob Perkins  <jap1@users.sourceforge.net>

	* seahorse-key-manager: Added View->Expand All and Collapse All
	to address bug 108743
	* seahorse-key-widget: Bug fix in hash table removal
