@@ -13,6 +13,24 @@ X = finished
 Contact a maintainer if you'd like to be responsible for a task.
 Also check bugzilla for other tasks.
 
+
+For 0.8 release
+---------------
+[ ] Fix app dialogs
+[ ] Nautilus context menu / mime types
+[ ] Nautilus properties view for pgp/gpg files
+[ ] Command line ops to be used by context menu
+[ ] Fix libseahorse dialogs to work with command line ops
+[ ] Gedit plugin
+[ ] Keys:// gnome-vfs view
+[ ] Migrate key-ops to libseahorse for keys://
+
+For 1.0 release
+---------------
+[ ] Gpgsm support
+[ ] Migrate to Gpgme 0.4 while providing 0.3 compatability
+
+
 0.8 (Focus: Key management)
 -----------------------------
 
@@ -46,29 +64,28 @@ Also check bugzilla for other tasks.
 [X] Don't list disabled or non-capable keys for encryption recipients (Resp: Jacob)
 [X] Key sorting by uid, trust & validity (Resp: Jacob)
 [X] Hide subkeys be default (Resp: Jacob)
-[?] Icons in list for visual indication of key status (Resp: Jacob)
 [X] Right click key menu (Resp: Jacob)
-[?] If key's owner trust changes, must refresh all signed keys to recalc validity (wait for key signatures) (Resp: Jacob)
 [X] Create SeahorseKeyPair, is a SeahorseKey, has the secret GpgmeKey (Resp: Jacob)
 [X] Startup progress display (Resp: Jacob)
 [ ] Usability review (Resp: Jacob & Gnome Usability Team)
 [ ] Drag data in = import (Resp: Jacob)
 [ ] Drag key out = export (Resp: Jacob)
 [ ] Drag between recipients (Resp: Jacob)
-[?] Multiple key selection (Resp: Jacob)
+[X] Multiple key selection (Resp: Jacob)
 [X] Context gconf listener (Resp: Jacob)
-[ ] Error check gconf & gnome help (Resp: Jacob)
+[?] Error check gconf & gnome help (Resp: Jacob)
 [ ] More refined key changes so that key-properties doesn't have to delete notebook pages
-[A] Backup key-pair
+[ ] Backup key-pair
+[ ] Command line operations (Resp: Jacob)
+[ ] Nautilus component (Resp: Jacob) (requires command line)
 
 1.0 (Focus: Gnome integration & usability)
 --------------------------------------------
 
-[ ] Command line operations (Resp: Jacob)
-[ ] Nautilus component (Resp: Jacob) (requires command line)
 [ ] Help glossary and more concepts (Resp: Jacob & Gnome Doc Team)
 [ ] Require Gnome2.2 (Resp: Jacob)
 [ ] Accessability review (Resp: Jacob & Gnome Usability Team)
+[?] If key's owner trust changes, must refresh all signed keys to recalc validity (wait for key signatures) (Resp: Jacob)
 
 Future Features
 ---------------
