@@ -1,11 +1,11 @@
+mimedir = $(datadir)/mime-info
+mime_DATA = seahorse.mime seahorse.keys
+
+@INTLTOOL_SCHEMAS_RULE@
+
 schemasdir = $(GCONF_SCHEMA_FILE_DIR)
 schemas_in_files = seahorse.schemas.in
 schemas_DATA = $(schemas_in_files:.schemas.in=.schemas)
-
-mimedir = $(datadir)/mime-info
-mime_DATA = seahorse.mime
-
-@INTLTOOL_SCHEMAS_RULE@
 
 if GCONF_SCHEMAS_INSTALL
 install-data-local:
@@ -30,3 +30,7 @@ EXTRA_DIST = \
 	$(schemas_in_files) \
 	$(desktop_in_files) \
 	$(mime_DATA)
+
+CLEANFILES = \
+	$(desktop_DATA) \
+	$(schemas_DATA)
