@@ -1,0 +1,2 @@
+application/pgp-signature
+	icon_filename=gnome-application-pgp-encrypted
