@@ -1,2 +1,11 @@
 application/pgp
-	ext: pgp gpg sig asc
+	ext: pgp asc
+
+application/pgp-encrypted
+	ext: gpg
+
+application/pgp-signature
+	ext: sig
+
+application/pgp-keys
+	ext: key keys
