@@ -1,5 +1,57 @@
 <oaf_info>
-	<oaf_server iid="OAFIID:Seahorse_Component_Encrypt" type="shlib" location="@BONOBODIR@/libseahorse-component.so">
+	<oaf_server iid="OAFIID:Seahorse_Component_Encrypted" type="shlib" location="@BONOBODIR@/libseahorse-component.so">
+		<oaf_attribute name="repo_ids" type="stringv">
+			<item value="IDL:Bonobo/Unknown:1.0"/>
+			<item value="IDL:Bonobo/Listener:1.0"/>
+		</oaf_attribute>
+		<oaf_attribute name="name" type="string" _value="Seahorse Component decrypt operations"/>
+		<oaf_attribute name="description" type="string" _value="Seahorse component"/>
+		<oaf_attribute name="bonobo:supported_uri_schemes" type="stringv">
+			<item value="file"/>
+		</oaf_attribute>
+		<oaf_attribute name="bonobo:supported_mime_types" type="stringv">
+			<item value="application/pgp-encrypted"/>
+			<item value="application/pgp"/>
+		</oaf_attribute>
+		<oaf_attribute name="nautilus:context_menu_handler" type="boolean" value="true"/>
+		<oaf_attribute name="nautilus:can_handle_multiple_files" type="boolean" value="false"/>
+		<oaf_attribute name="nautilusverb:DecryptVerify" type="string" _value="Decrypt And Verify Signatures..."/>
+		<oaf_attribute name="nautilusverb:Decrypt" type="string" _value="Decrypt..."/>
+	</oaf_server>
+	<oaf_server iid="OAFIID:Seahorse_Component_Signature" type="shlib" location="@BONOBODIR@/libseahorse-component.so">
+		<oaf_attribute name="repo_ids" type="stringv">
+			<item value="IDL:Bonobo/Unknown:1.0"/>
+			<item value="IDL:Bonobo/Listener:1.0"/>
+		</oaf_attribute>
+		<oaf_attribute name="name" type="string" _value="Seahorse Component verify operation"/>
+		<oaf_attribute name="description" type="string" _value="Seahorse component"/>
+		<oaf_attribute name="bonobo:supported_uri_schemes" type="stringv">
+			<item value="file"/>
+		</oaf_attribute>
+		<oaf_attribute name="bonobo:supported_mime_types" type="stringv">
+			<item value="application/pgp-signature"/>
+			<item value="application/pgp"/>
+		</oaf_attribute>
+		<oaf_attribute name="nautilus:context_menu_handler" type="boolean" value="true"/>
+		<oaf_attribute name="nautilus:can_handle_multiple_files" type="boolean" value="false"/>
+		<oaf_attribute name="nautilusverb:Verify" type="string" _value="Verify"/>
+	</oaf_server>
+	<oaf_server iid="OAFIID:Seahorse_Component_Keys" type="shlib" location="@BONOBODIR@/libseahorse-component.so">
+		<oaf_attribute name="repo_ids" type="stringv">
+			<item value="IDL:Bonobo/Unknown:1.0"/>
+			<item value="IDL:Bonobo/Listener:1.0"/>
+		</oaf_attribute>
+		<oaf_attribute name="name" type="string" _value="Seahorse Component import operation"/>
+		<oaf_attribute name="description" type="string" _value="Seahorse component"/>
+		<oaf_attribute name="bonobo:supported_mime_types" type="stringv">
+			<item value="application/pgp-keys"/>
+			<item value="application/pgp-encrypted"/>
+		</oaf_attribute>
+		<oaf_attribute name="nautilus:context_menu_handler" type="boolean" value="true"/>
+		<oaf_attribute name="nautilus:can_handle_multiple_files" type="boolean" value="false"/>
+		<oaf_attribute name="nautilusverb:Import" type="string" _value="Import"/>
+	</oaf_server>
+	<oaf_server iid="OAFIID:Seahorse_Component_All" type="shlib" location="@BONOBODIR@/libseahorse-component.so">
 		<oaf_attribute name="repo_ids" type="stringv">
 			<item value="IDL:Bonobo/Unknown:1.0"/>
 			<item value="IDL:Bonobo/Listener:1.0"/>
@@ -17,25 +69,5 @@
 		<oaf_attribute name="nautilusverb:EncryptSign" type="string" _value="Encrypt And Sign..."/>
 		<oaf_attribute name="nautilusverb:Sign" type="string" _value="Sign..."/>
 		<oaf_attribute name="nautilusverb:Encrypt" type="string" _value="Encrypt..."/>
-		<oaf_attribute name="nautilusverb:Import" type="string" _value="Import Keys"/>
-	</oaf_server>
-	<oaf_server iid="OAFIID:Seahorse_Component_Decrypt" type="shlib" location="@BONOBODIR@/libseahorse-component.so">
-		<oaf_attribute name="repo_ids" type="stringv">
-			<item value="IDL:Bonobo/Unknown:1.0"/>
-			<item value="IDL:Bonobo/Listener:1.0"/>
-		</oaf_attribute>
-		<oaf_attribute name="name" type="string" _value="Seahorse Component decrypt operations"/>
-		<oaf_attribute name="description" type="string" _value="Seahorse component"/>
-		<oaf_attribute name="bonobo:supported_uri_schemes" type="stringv">
-                	<item value="file"/>
-		</oaf_attribute>
-		<oaf_attribute name="bonobo:supported_mime_types" type="stringv">
-			<item value="application/pgp"/>
-		</oaf_attribute>
-		<oaf_attribute name="nautilus:context_menu_handler" type="boolean" value="true"/>
-		<oaf_attribute name="nautilus:can_handle_multiple_files" type="boolean" value="false"/>
-		<oaf_attribute name="nautilusverb:DecryptVerify" type="string" _value="Decrypt And Verify Signatures..."/>
-		<oaf_attribute name="nautilusverb:Verify" type="string" _value="Verify Signature"/>
-		<oaf_attribute name="nautilusverb:Decrypt" type="string" _value="Decrypt..."/>
 	</oaf_server>
 </oaf_info>
