@@ -1,3 +1,11 @@
+2003-04-11  Jacob Perkins  <jap1@users.sourceforge.net>
+
+	* data/seahorse.mime:
+	* plugins/nautilus/Seahorse_Component.server.in.in:
+	* plugins/nautilus/libmain.c:
+	* plugins/nautilus/seahorse-component.c:
+	Refined servers in order to restrict options
+
 2003-04-10  Jacob Perkins  <jap1@users.sourceforge.net>
 
 	* Added plugins/nautilus for the nautilus component
